--- a/abins/pom.xml
+++ b/abins/pom.xml
@@ -161,6 +161,17 @@
 	    <version>1.3.2</version>
 	</dependency>
 
+  	<!--protostuff序列化-->
+      <dependency>
+          <groupId>com.dyuproject.protostuff</groupId>
+          <artifactId>protostuff-core</artifactId>
+          <version>1.0.8</version>
+      </dependency>
+      <dependency>
+          <groupId>com.dyuproject.protostuff</groupId>
+          <artifactId>protostuff-runtime</artifactId>
+          <version>1.0.8</version>
+      </dependency>
   </dependencies>
   
   <build>
